# MoveItFR3Py

./: README.md
moveit_fr3_py/: CMakeLists.txt  package.xml
moveit_fr3_py/scripts/: franka_pick_n_place.py
